--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,16 +3,22 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 body {
-    font-size: 12 px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 60px;
+    padding-right: 60px;  
     font-family: 'Roboto';
     font-weight: 300;
-    margin-left: 60 px;
     background-color: #f8f8f8;
     line-height: 25px;
+}
+
+p {
+    padding-bottom: 10px;
+    text-indent: 15px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,11 +28,15 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 20 px;
     font-weight: 900;
-    color: FFC547;
+    /* color: #FFC547; */
 }
 
-h2 {
+h2, h3 {
     line-height: 50px;
+}
+
+h3 {
+    padding-left: 210px;
 }
 
 .site-header {
@@ -35,6 +45,10 @@ h2 {
     align-items: center;
     padding: 20px;
     
+}
+
+.nav a {
+    padding-left: 20px;
 }
 
 #about {
@@ -49,13 +63,55 @@ img {
     max-width: 100%;
 }
 
+.img:hover {
+    colo
+}
+
 .text {
     padding-left: 50px;
     width: 600px;
+}
+
+.skills {
+    padding-top: 10px;
+    gap: 5px;
+    margin: auto;
+}
+
+.skills td {
+    padding-right: 100px;
+}
+
+.skills img {
+    width: 30px;
+}
+
+#star {
+    text-align: right;
+}
+
+#star:hover {
+    color: #FFC547;
+    opacity: 1; 
+    transition: 0.5s;
+}
+
+.portimg {
+    display: flex;
+    justify-content: space-between;
 }
 
 ul {
     list-style-type: circle;
 }
 
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    color: #00000095;
+    animation: fadeIn 1s;
+}
 
