added scripts and buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,8 +89,6 @@ h2, h3 {
     text-align: center;
 }
 
-
-
 /* header section */
 #site-header {
     display: flex;
@@ -113,9 +111,14 @@ h2, h3 {
 
 }
 
+.picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .picture img {
     border-radius: 10px;
-    border: 10px solid #FFC547;
 }
 
 
@@ -162,6 +165,33 @@ h2, h3 {
     opacity: 1; 
     transition: 0.5s;
 }
+
+/* button */
+
+.btn {
+    text-align: center;
+}
+
+#btn-alert {
+    font-weight: 700;
+    padding: 10px;
+    width: 100px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #FFC547;
+    border-width: 1px;
+    background-color: #FFC547;
+    margin-top: 10px;
+}
+
+#btn-alert:hover {
+    background-color: #f8f8f8;
+    border-color: #FFC547;
+    border-width: 1px;
+    transition: 0.5s;
+}
+
+/* portfolio */
 
 .portimg {
     display: flex;
