--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,8 @@ body {
     padding-right: 60px;  
     font-family: 'Roboto';
     font-weight: 300;
-    background-color: #f8f8f8;
+    background-color: #000;;
+    color: #fff;
 }
 
 p {
@@ -66,11 +67,11 @@ ul {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 
 a:hover {
-    color: #00000095;
+    color: #FFC547;
     opacity: 1;
     transition: 0.5s;
 }
